[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]
#powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr", branch = "main" }
powdr-riscv-runtime = { path = "../../powdr2/riscv-runtime" }
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }

models = { path = "../models" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }

# TODO can be removed once the powdr RISCV nightly is updated
ahash = { version = "=0.8.6", default-features = false }

[workspace]
